--- a/app/src/css/About.css
+++ b/app/src/css/About.css
@@ -1,9 +1,29 @@
 .about-container {
     display: flex;
+    flex-direction: row;
+    margin: 0% 10%;
+    justify-content: space-between;
+}
+
+.about-heading {
+    text-align: left;
+    margin: 2% 10%;
+}
+
+.about-left {
+    display: flex;
     flex-direction: column;
-    margin-left: 50%;
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);    
+    justify-content: center;
+    align-items: flex-start;
+    margin-right: 5%;
+}
+
+.about-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5%;
 }
 
 .about-text {
