--- a/app/src/css/About.css
+++ b/app/src/css/About.css
@@ -1,19 +1,19 @@
 .about-container {
     display: flex;
     flex-direction: row;
-    margin: 0% 10%;
+    margin: 0% 5%;
     justify-content: space-between;
 }
 
 .about-heading {
     text-align: left;
-    margin: 2% 10%;
+    margin: 2% 5%;
 }
 
 .about-left {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     margin-right: 5%;
 }
