--- a/app/src/css/About.css
+++ b/app/src/css/About.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     margin: 0% 5%;
     justify-content: space-between;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .about-heading {
