--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+@font-face {
+  font-family: "HeaderFont";
+  src: local("rivalsans-black"),
+    url("./fonts/rivalsans-black.otf") format("opentype");
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
