--- a/app/src/css/About.css
+++ b/app/src/css/About.css
@@ -4,6 +4,7 @@
     margin: 0% 5%;
     justify-content: space-between;
     font-family: Helvetica, Arial, sans-serif;
+    font-size: 22px;
 }
 
 .about-heading {
