--- a/app/src/css/About.css
+++ b/app/src/css/About.css
@@ -4,12 +4,14 @@
     margin: 0% 5%;
     justify-content: space-between;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .about-heading {
     text-align: left;
     margin: 2% 5%;
+    font-family: "HeaderFont";
+    font-size: 60px;
 }
 
 .about-left {
@@ -18,6 +20,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     margin-right: 5%;
+    
 }
 
 .about-right {
@@ -25,7 +28,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 5%;
+    margin-left: 20%;
+    width: 2000px;
+    height: 100;
 }
 
 .about-text {
