--- a/app/src/css/About.css
+++ b/app/src/css/About.css
@@ -28,11 +28,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 20%;
+    margin-bottom: auto;
     width: 2000px;
     height: 100;
 }
 
 .about-text {
     text-align: left;
+    line-height:200%;
 }
