--- a/app/src/css/Profile.css
+++ b/app/src/css/Profile.css
@@ -5,7 +5,7 @@
 }
 h1{
     font-family: "HeaderFont";
-    font-size: 40px;
+    font-size: 60px;
 }
 .inline-container {
     display: flex;
@@ -23,3 +23,44 @@ h1{
     flex-direction: column;
     align-items: flex-start;
 }
+
+.new-comment{
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:space-around;
+}
+
+.left-comment{
+    display:flex;
+    flex-direction: column;
+    align-items:flex-start;
+}
+
+.left-comment{
+    display:flex;
+    font-size: large;
+    flex-direction: column;
+    align-items:auto;
+}
+
+.title{
+    font-size:30px;
+    font-weight: 1000;
+    margin-right: 10%;
+    margin-bottom: 10%;
+    text-align: left
+   
+}
+
+.value{
+    font-size:30px;
+    text-align: left;
+    
+}
+
+.space {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
